Revert "Replace react-datepicket with react-day-picker"
This reverts commit eb3f41717a74b464ef02f47d7d3841ae5d765067.

--- a/app/styles/components/map/datepicker.scss
+++ b/app/styles/components/map/datepicker.scss
@@ -17,13 +17,11 @@
   }
 
   .datepickerTitle {
-    position: relative !important;
-    border-right: 1px solid $color-7;
-    position: relative;
-    padding-bottom: 5px;
     color: rgba($color-3, .5);
     font-size: $font-size-xs-small;
     font-weight: $font-weight-bold;
+    padding-bottom: 20px;
+    position: absolute;
     text-align: center;
     text-transform: uppercase;
     top: 16px;
@@ -41,7 +39,6 @@
   }
 
   .react-datepicker__input-container {
-    border-right: 1px solid $color-7;
     height: 100%;
   }
 
@@ -58,8 +55,5 @@
     text-transform: uppercase;
     width: 100%;
     word-wrap: break-word;
-  }
-  .DayPickerInput-Overlay {
-    bottom: 50px;
   }
 }
