--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -9,6 +9,21 @@
   width: 100%;
   z-index: 102;
 
+  &.entering, .exiting {
+    left: $map-panels-width;
+  }
+
+  &.entered, .exited {
+    left: 0;
+  }
+
+  &.entered, .exited, .entering, .exiting {
+    -moz-transition: all $panel-animation-delay $panel-animation-ease;
+    -webkit-transition: all $panel-animation-delay $panel-animation-ease;
+    -o-transition: all $panel-animation-delay $panel-animation-ease;
+    transition: all $panel-animation-delay $panel-animation-ease;
+  }
+
   &._noHeader {
     top: 0;
   }
