--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -76,7 +76,7 @@ $color-27: #c7c7c7;
 $color-28: #39579b;
 $color-29: #da4735;
 $color-30: #55acee;
-$color-31: #99D3E1;
+$color-31: #46a4b9;
 $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
 
