--- a/app/styles/components/submenu.scss
+++ b/app/styles/components/submenu.scss
@@ -13,8 +13,11 @@
       justify-content: space-between;
       display: flex;
       padding-bottom: 15px;
+      margin-left: 20px;
+      margin-right: 22px;
 
       @media #{$mq-tablet} {
+        margin: 0;
         padding-top: 24px;
         flex-direction: row;
       }
@@ -32,6 +35,7 @@
           text-align: left;
           text-transform: uppercase;
           margin-left: 10px;
+          margin-top: 4px;
 
           @media #{$mq-tablet} {
             font-size: $font-size-x-small;
