--- a/app/styles/components/map/layer-list.scss
+++ b/app/styles/components/map/layer-list.scss
@@ -1,5 +1,16 @@
 @import '../../settings';
 
+.basemapsPanel {
+  border-bottom: 3px solid black;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+
+  .basemapsTitle {
+    color: $color-4;
+    padding-bottom: 10px;
+  }
+}
+
 .layerList {
   align-items: center;
   display: flex;
@@ -19,6 +30,16 @@
 
   &:not(:first-child) {
     margin: 5px 0 0;
+  }
+
+  &.halfRow {
+    text-transform: uppercase;
+    width: 50%;
+    margin: 0;
+
+    &:first-child > .layerInfo {
+      margin: 0;
+    }
   }
 
   &:first-child > .layerInfo {
