--- a/app/styles/components/map/layer-list.scss
+++ b/app/styles/components/map/layer-list.scss
@@ -1,13 +1,21 @@
 @import '../../settings';
 
 .basemapsPanel {
-  border-bottom: 3px solid black;
-  margin-bottom: 10px;
+  border-bottom: 2px solid black;
   padding-bottom: 10px;
+  margin-left: -10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-size: $font-size-xs-small;
+
+  @media #{mq-tablet} {
+    font-size: $font-size-small;
+  }
 
   .basemapsTitle {
     color: $color-4;
     padding-bottom: 10px;
+
   }
 }
 
@@ -39,6 +47,14 @@
 
     &:first-child > .layerInfo {
       margin: 0;
+    }
+
+
+    .layerThumbnail {
+      border: 1px solid $color-19;
+      height: 20px;
+      margin: 0 10px 0 0;
+      width: 20px;
     }
   }
 
