--- a/app/styles/components/map/layer-list.scss
+++ b/app/styles/components/map/layer-list.scss
@@ -3,7 +3,9 @@
 .basemapsPanel {
   border-bottom: 2px solid black;
   padding-bottom: 10px;
-  margin-left: -10px;
+  margin-left: -35px;
+  margin-right: -35px;
+  margin-bottom: 10px;
   padding-left: 30px;
   padding-right: 30px;
   font-size: $font-size-xs-small;
