Use a calendarPosition prop related to the input position

--- a/app/styles/components/map/datepicker.scss
+++ b/app/styles/components/map/datepicker.scss
@@ -43,7 +43,7 @@
 }
 
 :global .calendar {
-  &.rightCalendar {
+  &.upLeftCalendar {
     left: -170px;
     .react-datepicker__triangle {
       left: 193px;
