--- a/app/styles/components/map/layer-list.scss
+++ b/app/styles/components/map/layer-list.scss
@@ -2,10 +2,10 @@
 
 .basemapsPanel {
   border-bottom: 2px solid black;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   margin-left: -35px;
   margin-right: -35px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   padding-left: 30px;
   padding-right: 30px;
   font-size: $font-size-xs-small;
@@ -17,17 +17,24 @@
   .basemapsTitle {
     color: $color-4;
     padding-bottom: 10px;
-
   }
 }
 
-.layerList {
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
+.title {
+  color: $color-4;
+  padding-bottom: 18px;
+  font-size: $font-size-small;
+}
 
-  @media #{mq-tablet} {
-    max-height: 0;
+.layerListContainer {
+  .layerList {
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+
+    @media #{mq-tablet} {
+      max-height: 0;
+    }
   }
 }
 
@@ -43,6 +50,7 @@
   }
 
   &.halfRow {
+    display: inline-block;
     text-transform: uppercase;
     width: 50%;
     margin: 0;
