Group layers by type in layer panel

--- a/app/styles/components/map/layer-list.scss
+++ b/app/styles/components/map/layer-list.scss
@@ -26,6 +26,10 @@
   font-size: $font-size-small;
 }
 
+.spacedTitle {
+  padding-top: 37px;
+}
+
 .layerListContainer {
   .layerList {
     align-items: center;
