--- a/app/styles/components/map/modal.scss
+++ b/app/styles/components/map/modal.scss
@@ -7,6 +7,68 @@
   text-align: center;
 }
 
+.optionsContainer {
+  display: flex;
+  flex-basis: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 20px;
+
+  @media #{$mq-tablet} {
+    margin-top: 40px;
+    flex-basis: calc(50% - 13px);
+  }
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin-right: 45px;
+  width: 100%;
+}
+
+.itemTitle {
+  color: $color-4;
+  font-size: $font-size-small;
+  margin-left: 15px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.nameInput {
+  background-color: transparent;
+  border: 0;
+  border-bottom: 1px solid rgba($color-3, .3);
+  border-radius: 0;
+  color: $color-31;
+
+  font-size: $font-size-x-small;
+  font-weight: $font-weight-normal;
+  line-height: 1.8;
+
+  outline: 0;
+  margin-bottom: 20px;
+  padding-right: 30px;
+  width: 100%;
+
+  &::-webkit-input-placeholder {
+    color: rgba($color-3, .3);
+  }
+
+  &::-moz-placeholder {
+    color: rgba($color-3, .3);
+  }
+
+  &:-ms-input-placeholder {
+    color: rgba($color-3, .3);
+  }
+}
+
+
+.wrapper{
+    padding-bottom: 40px;
+}
+
 .footerContainer {
   display: flex;
   justify-content: center;
