--- a/app/styles/components/map/modal.scss
+++ b/app/styles/components/map/modal.scss
@@ -27,10 +27,15 @@
   width: 100%;
 }
 
+.sectionTitle {
+  margin-bottom: 20px;
+}
+
 .itemTitle {
   color: $color-4;
   font-size: $font-size-small;
   margin-left: 15px;
+  margin-bottom: 5px;
   text-transform: uppercase;
   text-align: center;
 }
