Update play icon with SVG version

--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -25,6 +25,13 @@
   width: .8125em;
 }
 
+.playIcon {
+  height: 100%;
+  width: 13px;
+  position: relative;
+  left: 2px;
+}
+
 .iconShare {
   fill: $color-4;
   height: 16px;
