Implement create/edit logic in FilterGroup form; extract FilterGroup actions/reducer to new files; new icons

--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -78,6 +78,19 @@
   width: 15px;
 }
 
+
+.pencilIcon {
+  height: 15px;
+  width: 15px;
+  fill: $color-31;
+}
+
+.deleteBucketIcon {
+  height: 15px;
+  width: 15px;
+  fill: $color-31;
+}
+
 .pinIcon {
   cursor: pointer;
   height: 16px;
