--- a/app/styles/components/map/button.scss
+++ b/app/styles/components/map/button.scss
@@ -1,9 +1,9 @@
 @import '../../settings';
 
 .button {
-  background-color: $color-1;
-  border: 1px solid rgba($color-3, .3);
-  color: $color-3;
+  background-color: $color-32;
+  border: 1px solid $color-31;
+  color: $color-4;
   cursor: pointer;
   font-family: $font-family-1;
   font-size: $font-size-xs-small;
