--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -21,8 +21,25 @@
   width: .89453125em;
 }
 
-.iconReportIcon {
+.reportIcon {
   width: .8125em;
+  height: 16px;
+  path {
+    &:first-child {
+      fill: $color-31;
+    }
+
+    &:last-child {
+      fill: $color-4;
+    }
+  }
+}
+
+.deleteIcon {
+  cursor: pointer;
+  fill: $color-31;
+  height: 16px;
+  width: 10px;
 }
 
 .aoiIcon {
@@ -63,13 +80,18 @@
 
 .infoIcon {
   cursor: pointer;
-}
-
-.blendingIcon {
-  cursor: pointer;
-  fill: $color-19;
+  fill: $color-31;
   height: 15px;
   width: 15px;
+}
+
+.paintIcon {
+  cursor: pointer;
+  fill: $color-31;
+  height: 15px;
+  width: 15px;
+  position: relative;
+  top: 1px;
 
   &._white {
     fill: $color-4;
