--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -77,6 +77,9 @@ $color-28: #39579b;
 $color-29: #da4735;
 $color-30: #55acee;
 $color-31: #46a4b9;
+$color-32: #081c4f;
+$color-33: #000f35;
+$color-34: #99d3e1;
 $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
 
