Update styles for vessel lists and modals

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -48,6 +48,7 @@ $font-size-huge: 100px;
 // Font weights
 $font-weight-light: 300;
 $font-weight-normal: 400;
+$font-weight-light-bold: 500;
 $font-weight-bold: 700;
 
 // Colors
@@ -74,6 +75,8 @@ $color-31: #46a4b9;
 $color-32: #081c4f;
 $color-33: #000f35;
 $color-34: #99d3e1;
+$color-35: #153b78;
+
 $hsla-begin: hsla(0, 0%, 0%, .1);
 $hsla-end: hsla(0, 0%, 100%, .1);
 
