--- a/app/styles/components/map/button.scss
+++ b/app/styles/components/map/button.scss
@@ -7,7 +7,7 @@
   cursor: pointer;
   font-family: $font-family-1;
   font-size: $font-size-xs-small;
-  font-weight: $font-weight-normal;
+  font-weight: $font-weight-light-bold;
   height: 30px;
   outline: none;
   text-align: center;
