--- a/app/styles/components/button.scss
+++ b/app/styles/components/button.scss
@@ -17,3 +17,21 @@
   text-transform: uppercase;
   width: 100%;
 }
+
+.expandButton {
+  outline: none;
+  padding: 5px;
+  
+  svg {
+    fill: $color-mid-blue !important;
+  }
+  
+  &.active {
+    border: 1px solid $color-mid-blue;
+    border-radius: 50%;
+
+    svg {
+      fill: $color-4 !important;
+    }
+  }
+}
