--- a/app/styles/icons.scss
+++ b/app/styles/icons.scss
@@ -85,6 +85,13 @@
   width: 15px;
 }
 
+.selectIcon {
+  cursor: pointer;
+  fill: $color-4;
+  width: 22px;
+  height: 30px;
+}
+
 .paintIcon {
   cursor: pointer;
   fill: $color-31;
