--- a/app/styles/components/shared/expand-item.scss
+++ b/app/styles/components/shared/expand-item.scss
@@ -3,14 +3,15 @@
 .expandItem {
 
   .opened {
+    display: flex;
+    flex-direction: row;
     background-color: $color-mid-blue;
     margin-bottom: 10px;
     margin-left: -35px;
-    margin-right: -70px;
+    margin-right: -35px;
     color: $color-white;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 35px;
+    padding: 20px 35px;
+    align-items: flex-start;
   }
 
   .closed {
