--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -29,3 +29,22 @@
     transform: rotate(45deg);
   }
 }
+
+@mixin triangle($color, $direction) {
+  margin-top: -25px;
+  width: 0;
+  height: 0;
+
+  @if($direction == 'up') {
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+
+    border-bottom: 5px solid $color;
+  }
+  @if($direction == 'down') {
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+
+    border-top: 20px solid $color;
+  }
+}
