--- a/app/styles/components/shared/expand-item.scss
+++ b/app/styles/components/shared/expand-item.scss
@@ -1,4 +1,5 @@
 @import '../../settings';
+@import '../../mixins';
 
 .expandItem {
 
@@ -12,6 +13,25 @@
     color: $color-white;
     padding: 20px 35px;
     align-items: flex-start;
+
+    &.firstIcon {
+      &::after {
+        right: 82px;
+      }
+    }
+
+    &.secondIcon{
+      &::after {
+        right: 44px;
+      }
+    }
+
+   &::after {
+      position: absolute;
+      content: "";
+      display: inline-block;
+      @include triangle($color-mid-blue, 'up');
+    }
   }
 
   .closed {
