--- a/app/styles/components/shared/color-picker.scss
+++ b/app/styles/components/shared/color-picker.scss
@@ -22,6 +22,10 @@
 }
 
 .colorPicker {
+  .title {
+    margin-bottom: 5px;
+  }
+
   input[type="radio"] {
     display: none;
     &:checked + label {
