Fix selector style and colors

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -83,6 +83,8 @@ $hsla-end: hsla(0, 0%, 100%, .1);
 $color-button-primary: $color-31;
 $color-mid-blue: $color-8;
 $color-white: $color-4;
+$color-fade-blue: rgba($color-34, 0.6);
+
 
 // Layers colors
 
