--- a/app/styles/components/shared/expand-item.scss
+++ b/app/styles/components/shared/expand-item.scss
@@ -2,42 +2,34 @@
 @import '../../mixins';
 
 .expandItem {
+  .notCarousel {
+    display: flex;
+    flex-direction: row;
+    background-color: $color-mid-blue;
+    margin-bottom: 10px;
+    margin-left: -35px;
+    margin-right: -35px;
+    color: $color-white;
+    padding: 20px 35px;
+    align-items: flex-start;
 
-  .opened {
-    &.notCarousel {
-
-      display: flex;
-      flex-direction: row;
-      background-color: $color-mid-blue;
-      margin-bottom: 10px;
-      margin-left: -35px;
-      margin-right: -35px;
-      color: $color-white;
-      padding: 20px 35px;
-      align-items: flex-start;
-
-      &.firstIcon {
-        &::after {
-          right: 82px;
-        }
-      }
-
-      &.secondIcon{
-        &::after {
-          right: 44px;
-        }
-      }
-
+    &.firstIcon {
       &::after {
-        position: absolute;
-        content: "";
-        display: inline-block;
-        @include triangle($color-mid-blue, 'up');
+        right: 82px;
       }
     }
-  }
 
-  .closed {
-    display: none;
+    &.secondIcon{
+      &::after {
+        right: 44px;
+      }
+    }
+
+    &::after {
+      position: absolute;
+      content: "";
+      display: inline-block;
+      @include triangle($color-mid-blue, 'up');
+    }
   }
 }
