Fix hours margin

--- a/app/styles/components/control_panel.scss
+++ b/app/styles/components/control_panel.scss
@@ -69,6 +69,7 @@
       font-family: $font-family-1;
       font-size: $font-size-s-medium;
       font-weight: $font-weight-bold;
+      margin-top: 5px;
     }
 
     > .categoriesDisplay {
