Fix expand button icons active margin

--- a/app/styles/components/button.scss
+++ b/app/styles/components/button.scss
@@ -64,6 +64,7 @@
 .expandButton {
   outline: none;
   padding: 5px 6px;
+  margin-left: 0px;
 
   svg {
     fill: $color-31 !important;
@@ -72,6 +73,8 @@
   &.active {
     border: 1px solid $color-31;
     border-radius: 50%;
+    margin-left: -1px;
+    margin-right: -1px;
 
     svg {
       fill: $color-4 !important;
