--- a/app/styles/components/map/pinned-tracks.scss
+++ b/app/styles/components/map/pinned-tracks.scss
@@ -32,14 +32,18 @@
 }
 
 .pinnedItem {
+  display: flex;
+  flex-direction: column;
+}
+
+.itemHeader {
   align-items: center;
   display: flex;
   justify-content: space-between;
   position: relative;
 
-  &:not(:first-child) {
-    margin: 10px 0 0;
-  }
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .itemName {
