Tiago spends too much time looking at each pixel

--- a/app/styles/components/button.scss
+++ b/app/styles/components/button.scss
@@ -65,6 +65,8 @@
   outline: none;
   padding: 5px 6px;
   margin-left: 0px;
+  width: 30px;
+  height: 30px;
 
   svg {
     fill: $color-31 !important;
