--- a/app/styles/components/map/layer-item.scss
+++ b/app/styles/components/map/layer-item.scss
@@ -28,7 +28,7 @@
   font-family: $font-family-1;
   font-size: $font-size-normal;
   height: 24px;
-  margin: 0;
+  margin-top: 1px;
   max-width: 85%;
   outline: none;
   text-overflow: ellipsis;
