Adjust edit mode and basemap highlight

--- a/app/styles/components/map/item-list.scss
+++ b/app/styles/components/map/item-list.scss
@@ -75,7 +75,7 @@
   }
 
   &._selected {
-    > .itemInfo > .itemThumbnail {
+    > .itemInfo > .layerThumbnail {
       border: 2px solid $color-4;
     }
   }
