--- a/app/styles/components/shared/expand-item-button.scss
+++ b/app/styles/components/shared/expand-item-button.scss
@@ -14,6 +14,9 @@
   }
 
   &.active {
+    margin-top: -2px;
+    padding-top: 2px;
+
     button {
       border: 1px solid $color-31;
       border-radius: 50%;
