Scroll map layers to fit the screens

--- a/app/styles/components/shared/expand-item.scss
+++ b/app/styles/components/shared/expand-item.scss
@@ -1,6 +1,19 @@
 @import '../../settings';
 
+._mobileScroll {
+
+  > .expandItem {
+    overflow-y: auto;
+    max-height: 218px;
+
+    @media #{$mq-tablet} {
+      max-height: 500px;
+    }
+  }
+}
+
 .expandItem {
+
   .notAccordion {
     flex-direction: row;
     background-color: $color-mid-blue;
